k8s-manifests/aws/ingress-v1.yaml
apiVersion: networking.k8s.io/v1 # available starting from kubernetes version v1.19
kind: Ingress
metadata:
  name: unguard-ingress
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: unguard
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "unguard-lb"
    alb.ingress.kubernetes.io/scheme: internal
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/app-root: /ui
spec:
  rules:
    - http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: unguard-frontend
                port:
                  number: 80
          - path: /ad-service
            pathType: Prefix
            backend:
              service:
                name: unguard-ad-service
                port:
                  number: 80
