k8s-manifests/aws/ingress.aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unguard-ingress
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: unguard
  annotations:
    alb.ingress.kubernetes.io/inbound-cidrs: 83.164.160.102/32, 80.80.253.56/32, 83.164.197.242/32 # LNZ, KLU, HGB endpoints
    alb.ingress.kubernetes.io/load-balancer-name: "ground-zero-unguard"
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: unguard-frontend
                port:
                  number: 80
          - path: /ad
            pathType: Prefix
            backend:
              service:
                name: unguard-ad-service
                port:
                  number: 80
